# Programmentwurf

./: CMakeLists.txt  README.md
include/: developer.h  developer.h.gch  developer_group.h  developer_group.h.gch
main/: main.c
src/: a.out  developer  developer.c  developer_group.c  main.c
